--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Stefanie-whatsapp-bot-md",
+  "name": "☞︎︎🇸 🅰︎И ͎Ѡ ̥ͦ🅐︎𝙇 🇧 ልረዐርዘ☜︎︎︎",
   "version": "4.0.1",
   "description": "Automated whatsapp md bot created using nodejs",
   "main": "stefanie.js",
