--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bot-md",
     "multi-device"
   ],
-  "author": "Mr.White Shadow",
+  "author": "☞︎︎🇸 🅰︎И ͎Ѡ ̥ͦ🅐︎𝙇 🇧 ልረዐርዘ☜︎︎︎",
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/baileys": "^4.1.0",
